# sclang

./: Digraph.gv  LICENSE  MANIFEST.in  README.md  requirements.txt  setup.py  simplest.c  simplest.h
.github/workflows/: main.yaml
doc/: life.sc
fsmgen/: __init__.py  error.py  graph.py  loader.py  models.py
scgen/: __init__.py  code.py  errors.py  graph.py  models.py  normalize.py
scgen/templates/: base.jinja  c_constructs.jinja  common.jinja  header_base.jinja  state_chart.jinja  state_chart_header.jinja  state_chart_impl.jinja  state_machine.jinja  state_machine_header.jinja  state_machine_impl.jinja
sclang/: __init__.py  code.py  error.py  graph.py  normalize.py  parser.py  state_chart.lark  state_chart.py
sclang/lib/: code.py  normalize.py
sclang/lib/templates/: state_chart.jinja  state_chart_header.jinja  state_chart_impl.jinja
sclang/templates/: base.jinja  graph.jinja  header_base.jinja  state_chart.jinja  state_chart_header.jinja  state_chart_impl.jinja
sclang/tools/: code.py  graph.py
tests/: invalid_transition_target_name.yaml  names_not_unique.yaml  simplest.yaml  test_loader.py  test_models.py  test_normalize.py  test_parser.py  test_state_chart.py  unreachable_state.yaml
tests/code/: CMakeLists.txt  actions.sc  actions_definitions.h  composite.sc  composite_definitions.h  guard.sc  guard_definitions.h  internal_transition.sc  internal_transition_definitions.h  simplest.sc  test_actions.c  test_composite.c  test_guard.c  test_internal_transition.c  test_simplest.c  test_transient_state.c  transient_state.sc  transient_state_definitions.h
tests/models/: empty_name.yaml  eventless_transition.yaml  eventless_transitions_not_unique.yaml  guard.yaml  invalid_transition_event.yaml  invalid_transition_target_name.yaml  simplest.yaml  simplest_names_not_unique.yaml  state_names_not_unique.yaml  state_no_name.yaml  transition_events_not_unique.yaml  unreachable_state.yaml
